assigned basic styling to top bar. querySelected HTML elements in Javascript file. Created countdown function.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <!--Contains timer and view high score link at top of page-->
     <div class="container" id="topBar">
-        <div id="highScore">View High Score</div>
+        <div id="highScore">
+            View High Score
+        </div>
         <div id="timer"></div>
     </div>
 
@@ -41,7 +43,7 @@
             <h2>High Scores</h2>
             <div id="highScores"></div>
             <btn id="goBack">Go Back</btn>
-            <bt id="clearScore">Clear Score</bt>
+            <btn id="clearScore">Clear Score</btn>
         </section>
 
     </div>
