set up structure of questions

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
             <btn id="startQuiz">Click to Start</btn>
         </section>
 
-        <!--Questions Screen-->
-        <section class="newScreen" id="question">
+        <!--Questions-->
+        <section class="newScreen" id="questions">
             <h2 id="questionText"></h2>
-            <div class="answers">
-            </div>
+            <ul id="answerList"></ul>
         </section>
 
         <!--High Score Entry Screen-->
