writing playQuestions function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <section class="newScreen" id="questions">
             <h2 id="questionText"></h2>
             <ul id="answerList"></ul>
+            <p id="answerStatus"></p>
         </section>
 
         <!--High Score Entry Screen-->
