--- a/index.html
+++ b/index.html
@@ -1,56 +1,52 @@
 <!DOCTYPE html>
 <html lang="eng-us">
-    <header>
+    <head>
         <title>Javascript Quiz</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" type="text/css" href="assets/normalize.css/normalize.css">
-    </header>
-
-    <!--Contains timer and view high score link at top of page-->
-    <div class="container" id="topBar">
-        <div id="highScore">
-            View High Score
-        </div>
-        <div id="timer"></div>
-    </div>
-
-    <!--Contains Start Page, Questions, High Score Entry and View High Score-->
-    <div class="container">
-        <!--Welcome Screen-->
-        <section class="newScreen" id="welcome">
-            <h1>Coding Quiz</h1>
-            <p>Test your Javascript knowledge with this quiz!<br/>Answer as many questions as you can in 90 seconds and try to get the high score.</p>
-            <btn id="startQuiz">Click to Start</btn>
-        </section>
-
-        <!--Questions-->
-        <section class="newScreen" id="questions">
-            <h2 id="questionText"></h2>
-            <ul id="answerList"></ul>
-            <p id="answerStatus"></p>
-        </section>
-
-        <!--High Score Entry Screen-->
-        <section class="newScreen" id="hsEntry">
-            <h2 id="recordedScore"></h2>
-            <textarea id="recordName" name="Enter Your Initials"></textarea>
-            <btn id="logScore">Log High Score</btn>
-        </section>
-
-        <!--List of High Scores-->
-        <section class="newScreen" id="scoreList">
-            <h2>High Scores</h2>
-            <div id="highScores"></div>
-            <btn id="goBack">Go Back</btn>
-            <btn id="clearScore">Clear Score</btn>
-        </section>
-
-    </div>
-
+    </head>
     <body>
-        
+        <!--Contains timer and view high score link at top of page-->
+        <div class="container" id="topBar">
+            <div id="highScore">
+                View High Score
+            </div>
+            <div id="timer"></div>
+        </div>
 
+        <!--Contains Start Page, Questions, High Score Entry and View High Score-->
+        <div class="container">
+            <!--Welcome Screen-->
+            <section class="newScreen" id="welcome">
+                <h1>Coding Quiz</h1>
+                <p>Test your Javascript knowledge with this quiz!<br/>Answer as many questions as you can in 90 seconds and try to get the high score.</p>
+                <btn id="startQuiz">Click to Start</btn>
+            </section>
+
+            <!--Questions-->
+            <section class="newScreen" id="questions">
+                <h2 id="questionText"></h2>
+                <ul id="answerList"></ul>
+                <p id="answerStatus"></p>
+            </section>
+
+            <!--High Score Entry Screen-->
+            <section class="newScreen" id="hsEntry">
+                <h2 id="recordedScore"></h2>
+                <textarea id="recordName" name="Enter Your Initials"></textarea>
+                <btn id="logScore">Log High Score</btn>
+            </section>
+
+            <!--List of High Scores-->
+            <section class="newScreen" id="scoreList">
+                <h2>High Scores</h2>
+                <div id="highScores"></div>
+                <btn id="goBack">Go Back</btn>
+                <btn id="clearScore">Clear Score</btn>
+            </section>
+
+        </div>  
     </body>
 
     <script src="assets/script.js"></script>
