got question cycling working

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!--List of High Scores-->
             <section class="newScreen" id="scoreList">
                 <h2>High Scores</h2>
-                <div id="highScores"></div>
+                <div id="highScores"><p></p></div>
                 <btn id="goBack">Go Back</btn>
                 <btn id="clearScore">Clear Score</btn>
             </section>
