got nextQuestion function working

--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
 
             <!--Questions-->
             <section class="newScreen" id="questions">
+                <!--header with question-->
+                <!--clickable answer choices-->
+                <!--shows the user whether the answer was wrong or right-->
                 <h2 id="questionText"></h2>
-                <ul id="answerList"></ul>
+                <ul id="answerList"><!--list items created in JS--></ul>
                 <p id="answerStatus"></p>
             </section>
 
             <!--High Score Entry Screen-->
             <section class="newScreen" id="hsEntry">
                 <h2 id="recordedScore"></h2>
-                <textarea id="recordName" name="Enter Your Initials"></textarea>
+                <textarea id="getName" name="Enter Your Initials"></textarea>
                 <btn id="logScore">Log High Score</btn>
             </section>
 
