--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!--Welcome Screen-->
             <section class="newScreen" id="welcome">
                 <h1>Coding Quiz</h1>
-                <p>Test your Javascript knowledge with this quiz!<br/>Answer as many questions as you can in 90 seconds and try to get the high score.</p>
+                <p>Test your Javascript knowledge with this quiz!<br/>Answer as many questions as you can and try to get the high score before the time runs out.<br/>Be careful! Each wrong answer deducts 10 seconds from your time left and 5 points from your final score.</p>
                 <btn id="startQuiz">Click to Start</btn>
             </section>
 
