--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <!--List of High Scores-->
             <section class="newScreen" id="scoreList">
                 <h2>High Scores</h2>
+                <ol id="allScores"><!--list items created in JS--></ol>
                 <btn id="goBack">Go Back</btn>
                 <btn id="clearScore">Clear Score</btn>
             </section>
